--- a/index.html
+++ b/index.html
@@ -293,6 +293,14 @@
         <div class="message-box">
           <p class="message">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
         </div>
+        <div class="form-box">
+          <form action="" class="form">
+            <input type="text" class="name" placeholder="Full name" required>
+            <input type="email" class="email" placeholder="Email address" required>
+            <input type="text-box" class="text-box" placeholder="Enter text here">
+            <input type="submit" class="submit-btn" value="Get in touch">
+          </form>
+        </div>
       </div>
     </main>
 
