--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <input type="submit" class="submit-btn" value="Get in touch">
           </form>
         </div>
-        <div class="social">
+        <div class="social social-down">
           <a
             class="social-link"
             href="https://github.com/SpaYco"
