Fix webhint linter errors

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           <form action="" class="form">
             <input type="text" class="name" placeholder="Full name" required>
             <input type="email" class="email" placeholder="Email address" required>
-            <input type="text-box" class="text-box" placeholder="Enter text here">
+            <input type="text" class="text-box" placeholder="Enter text here">
             <input type="submit" class="submit-btn" value="Get in touch">
           </form>
         </div>
