Make changes as suggested by reviewer

--- a/index.html
+++ b/index.html
@@ -294,75 +294,75 @@
           <p class="message">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
         </div>
         <div class="form-box">
-          <form action="" class="form">
-            <input type="text" class="name" placeholder="Full name" required>
-            <input type="email" class="email" placeholder="Email address" required>
-            <input type="text" class="text-box" placeholder="Enter text here">
+          <form action="https://formspree.io/f/xyyvrqgw" method="POST" class="form">
+            <input type="text" name="name-text" class="name" placeholder="Full name" required>
+            <input type="email" name="email" class="email" placeholder="Email address" required>
+            <input type="text" name="text-box" class="text-box" placeholder="Enter text here" maxlength="500">
             <input type="submit" class="submit-btn" value="Get in touch">
           </form>
         </div>
-        <div class="social social-down">
-          <a
-            class="social-link"
-            href="https://github.com/SpaYco"
-            target="_blank"
-            rel="noreferrer noopener"
-          >
-            <img
-              class="social-icon"
-              src="./media/svg/github.svg"
-              alt="GitHub Icon"
-            />
-          </a>
-          <a
-            class="social-link"
-            href="https://www.linkedin.com/in/spayco"
-            target="_blank"
-            rel="noreferrer noopener"
-          >
-            <img
-              class="social-icon"
-              src="./media/svg/linkedin.svg"
-              alt="LinkedIn Icon"
-            />
-          </a>
-          <a
-            class="social-link"
-            href="https://angel.co/spayco"
-            target="_blank"
-            rel="noreferrer noopener"
-          >
-            <img
-              class="social-icon"
-              src="./media/svg/angel.svg"
-              alt="AngelList Icon"
-            />
-          </a>
-          <a
-            class="social-link"
-            href="https://twitter.com/iSpaYco"
-            target="_blank"
-            rel="noreferrer noopener"
-          >
-            <img
-              class="social-icon"
-              src="./media/svg/twitter.svg"
-              alt="Twitter Icon"
-            />
-          </a>
-          <a
-            class="social-link"
-            href="https://spayco.medium.com/"
-            target="_blank"
-            rel="noreferrer noopener"
-          >
-            <img
-              class="social-icon"
-              src="./media/svg/medium.svg"
-              alt="Medium Icon"
-            />
-          </a>
-        </div>
+      </div>
+      <div class="social social-down">
+        <a
+          class="social-link"
+          href="https://github.com/SpaYco"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon"
+            src="./media/svg/github.svg"
+            alt="GitHub Icon"
+          />
+        </a>
+        <a
+          class="social-link"
+          href="https://www.linkedin.com/in/spayco"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon"
+            src="./media/svg/linkedin.svg"
+            alt="LinkedIn Icon"
+          />
+        </a>
+        <a
+          class="social-link"
+          href="https://angel.co/spayco"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon"
+            src="./media/svg/angel.svg"
+            alt="AngelList Icon"
+          />
+        </a>
+        <a
+          class="social-link"
+          href="https://twitter.com/iSpaYco"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon"
+            src="./media/svg/twitter.svg"
+            alt="Twitter Icon"
+          />
+        </a>
+        <a
+          class="social-link"
+          href="https://spayco.medium.com/"
+          target="_blank"
+          rel="noreferrer noopener"
+        >
+          <img
+            class="social-icon"
+            src="./media/svg/medium.svg"
+            alt="Medium Icon"
+          />
+        </a>
       </div>
     </main>
 
